--- a/src/assets/prefabs/cart-item.html
+++ b/src/assets/prefabs/cart-item.html
@@ -1,5 +1,8 @@
 <div class="cart-item__wrapper">
-  <p class="cart-item__title"></p>
+  <div class="cart-item__title-wrapper">
+    <img class="cart-item__title-icon">
+    <p class="cart-item__title-text"></p>
+  </div>
   <div class="cart-item__interaction-wrapper">
     <button class="cart-item__button" data-type="minus">
       <img src="/assets/img/minus.png" alt="-">
