--- a/src/ui/order.html
+++ b/src/ui/order.html
@@ -27,18 +27,20 @@
     </div>
     <div class="order-body__child" data-title="extras">
       <div class="order-body__text-wrapper">
-        <h4>Extra's</h4>
+        <h4>Extra</h4>
         <img src="/assets/img/arrow-down.png">
       </div>
       <div class="dropdown">
-        
+        <button class="dropdown__close-btn">
+          <img src="/assets/img/close.png" alt="Close">
+        </button>
       </div>
     </div>
     <div class="order-body__child order-body__footer">
       <p>Items:</p>
       <span id="order-items">0</span>
       <div class="order-interactions__wrapper">
-        <button class="order-interactions__child">Clear list</button>
+        <button class="order-interactions__child">Empty cart</button>
         <button class="order-interactions__child">Submit order</button>
       </div>
     </div>
