--- a/src/ui/order.html
+++ b/src/ui/order.html
@@ -14,6 +14,7 @@
       <p>Select your items</p>
       <span>WJK</span>
     </div>
+
     <div class="order-body__child" data-title="coffee">
       <div class="order-body__text-wrapper">
         <h4>Coffee</h4>
@@ -25,6 +26,7 @@
         </button>
       </div>
     </div>
+
     <div class="order-body__child" data-title="extras">
       <div class="order-body__text-wrapper">
         <h4>Extra</h4>
@@ -36,6 +38,19 @@
         </button>
       </div>
     </div>
+
+    <div class="order-body__child" data-title="cold">
+      <div class="order-body__text-wrapper">
+        <h4>Cold</h4>
+        <img src="/assets/img/arrow-down.png">
+      </div>
+      <div class="dropdown">
+        <button class="dropdown__close-btn">
+          <img src="/assets/img/close.png" alt="Close">
+        </button>
+      </div>
+    </div>
+
     <div class="order-body__child order-body__footer">
       <p>Items:</p>
       <span id="order-items">0</span>
